--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>To-Do List <img src="images/check-list.png" alt="icon.png"></h2>
+            <h2>To-Do List <img src="check-list.png" alt="icon.png"></h2>
             <div class="row">
                 <input type=" text" id="input-box" placeholder="add your text">
                 <button onclick="addTask()">Add</button>
